Attempted fix to make background visible

--- a/css/theme/ewb.css
+++ b/css/theme/ewb.css
@@ -10,14 +10,10 @@ section.has-dark-background, section.has-dark-background h1, section.has-dark-ba
  * GLOBAL STYLES
  *********************************************/
 body {
-  background-image: url(img/reveal-background.png) no-repeat center fixed;
-  background-size: cover;
+  background-image: url(img/reveal-background.png) no-repeat center bottom;
+  background-size: 100%;
   background: #fff;
   background-color: #fff; }
-
-.title {
-    background-image: url(img/reveal-background.png) no-repeat center fixed;
-    background-size: cover; }
 
 .reveal {
   font-family: Arial, Helvetica, sans-serif;
